stremio-jackett-community/middleware-inflightreq-stremio-jackett-community.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: inflightreq-stremio-jackett-community
  namespace: stremio-jackett-community
spec:
  # Protect from DDOS
  inFlightReq:
    amount: 100
